changed outbound auth back to prototype version
